; ModuleID = '/home/carl/AnghaBench/reactos/drivers/filesystems/ext2/src/ext4/extr_ext4_xattr.c_ext4_xattr_try_free_block.c'
source_filename = "/home/carl/AnghaBench/reactos/drivers/filesystems/ext2/src/ext4/extr_ext4_xattr.c_ext4_xattr_try_free_block.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.ext4_xattr_ref = type { i32, i32, %struct.TYPE_3__*, i32, i32* }
%struct.TYPE_3__ = type { %struct.TYPE_4__ }
%struct.TYPE_4__ = type { i64 }

@TRUE = common dso_local global i32 0, align 4
@FALSE = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.ext4_xattr_ref*)* @ext4_xattr_try_free_block to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @ext4_xattr_try_free_block(%struct.ext4_xattr_ref* %0) #0 {
  %2 = alloca %struct.ext4_xattr_ref*, align 8
  %3 = alloca i64, align 8
  store %struct.ext4_xattr_ref* %0, %struct.ext4_xattr_ref** %2, align 8
  %4 = load %struct.ext4_xattr_ref*, %struct.ext4_xattr_ref** %2, align 8
  %5 = getelementptr inbounds %struct.ext4_xattr_ref, %struct.ext4_xattr_ref* %4, i32 0, i32 2
  %6 = load %struct.TYPE_3__*, %struct.TYPE_3__** %5, align 8
  %7 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %6, i32 0, i32 0
  %8 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %7, i32 0, i32 0
  %9 = load i64, i64* %8, align 8
  store i64 %9, i64* %3, align 8
  %10 = load %struct.ext4_xattr_ref*, %struct.ext4_xattr_ref** %2, align 8
  %11 = getelementptr inbounds %struct.ext4_xattr_ref, %struct.ext4_xattr_ref* %10, i32 0, i32 2
  %12 = load %struct.TYPE_3__*, %struct.TYPE_3__** %11, align 8
  %13 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %12, i32 0, i32 0
  %14 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %13, i32 0, i32 0
  store i64 0, i64* %14, align 8
  %15 = load %struct.ext4_xattr_ref*, %struct.ext4_xattr_ref** %2, align 8
  %16 = getelementptr inbounds %struct.ext4_xattr_ref, %struct.ext4_xattr_ref* %15, i32 0, i32 4
  %17 = load i32*, i32** %16, align 8
  %18 = call i32 @extents_brelse(i32* %17)
  %19 = load %struct.ext4_xattr_ref*, %struct.ext4_xattr_ref** %2, align 8
  %20 = getelementptr inbounds %struct.ext4_xattr_ref, %struct.ext4_xattr_ref* %19, i32 0, i32 4
  store i32* null, i32** %20, align 8
  %21 = load %struct.ext4_xattr_ref*, %struct.ext4_xattr_ref** %2, align 8
  %22 = getelementptr inbounds %struct.ext4_xattr_ref, %struct.ext4_xattr_ref* %21, i32 0, i32 3
  %23 = load i32, i32* %22, align 8
  %24 = load %struct.ext4_xattr_ref*, %struct.ext4_xattr_ref** %2, align 8
  %25 = getelementptr inbounds %struct.ext4_xattr_ref, %struct.ext4_xattr_ref* %24, i32 0, i32 2
  %26 = load %struct.TYPE_3__*, %struct.TYPE_3__** %25, align 8
  %27 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %26, i32 0, i32 0
  %28 = load i64, i64* %3, align 8
  %29 = call i32 @ext4_free_blocks(i32 %23, %struct.TYPE_4__* %27, i64 %28, i32 1, i32 0)
  %30 = load i32, i32* @TRUE, align 4
  %31 = load %struct.ext4_xattr_ref*, %struct.ext4_xattr_ref** %2, align 8
  %32 = getelementptr inbounds %struct.ext4_xattr_ref, %struct.ext4_xattr_ref* %31, i32 0, i32 1
  store i32 %30, i32* %32, align 4
  %33 = load i32, i32* @FALSE, align 4
  %34 = load %struct.ext4_xattr_ref*, %struct.ext4_xattr_ref** %2, align 8
  %35 = getelementptr inbounds %struct.ext4_xattr_ref, %struct.ext4_xattr_ref* %34, i32 0, i32 0
  store i32 %33, i32* %35, align 8
  ret void
}

declare dso_local i32 @extents_brelse(i32*) #1

declare dso_local i32 @ext4_free_blocks(i32, %struct.TYPE_4__*, i64, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
